clusters/cl01tl/manifests/radarr-anime/HTTPRoute-radarr-anime.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-anime
  labels:
    app.kubernetes.io/instance: radarr-anime
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: radarr-anime
    helm.sh/chart: radarr-anime-5.1.0
  namespace: radarr-anime
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "radarr-anime.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: radarr-anime
          namespace: radarr-anime
          port: 4180
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
